--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  
   "name": "starter",
   "version": "0.1.0",
   "private": true,
@@ -9,16 +11,18 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "emailjs": "^4.0.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "swiper": "^9.2.2",
+    "react-scripts": "^2.1.3",
+    "react-scroll": "^1.8.9",
+    "swiper": "^6.8.4",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
